--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -569,6 +569,9 @@ Alias /images/ /data/tristara/web/images/
 Alias /js/ /data/tristara/web/js/
 Alias /flash/ /data/tristara/web/flash/
 
+# wordpress
+Alias /blog/ /data/tristara/wordpress/
+
 <Directory /data/tristara/web>
 Order deny,allow
 Allow from all
