--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -571,6 +571,7 @@ Alias /flash/ /data/tristara/web/flash/
 
 # wordpress
 Alias /blog/ /data/tristara/wordpress/
+Alias /blog /data/tristara/wordpress/
 
 <Directory /data/tristara/web>
 Order deny,allow
