fun pics uses solr, resizes images

--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -974,7 +974,14 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 # Proxy Server directives. Uncomment the following lines to
 # enable the proxy server:
 #
-#<IfModule mod_proxy.c>
+<IfModule mod_proxy.c>
+ProxyRequests Off
+ProxyPreserveHost On
+ProxyStatus On
+
+ProxyPass /solr http://10.242.75.153:8983/solr
+ProxyPassReverse /solr http://10.242.75.153:8983/solr
+
 #ProxyRequests On
 #
 #<Proxy *>
@@ -1000,7 +1007,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #</IfModule>
 #
 
-#</IfModule>
+</IfModule>
 # End of proxy directives.
 
 ### Section 3: Virtual Hosts
