--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -241,8 +241,8 @@ Include conf.d/*.conf
 #  when the value of (unsigned)Group is above 60000; 
 #  don't use Group #-1 on these systems!
 #
-User apache
-Group apache
+User ec2-user
+Group ec2-user
 
 ### Section 2: 'Main' server configuration
 #
