reddit blaster fixes

--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -979,8 +979,8 @@ ProxyRequests Off
 ProxyPreserveHost On
 ProxyStatus On
 
-ProxyPass /solr http://10.242.75.153:8983/solr
-ProxyPassReverse /solr http://10.242.75.153:8983/solr
+ProxyPass /solr http://localhost:8983/solr
+ProxyPassReverse /solr http://localhost:8983/solr
 
 #ProxyRequests On
 #
