--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -568,6 +568,7 @@ Alias /css/ /data/tristara/web/css/
 Alias /images/ /data/tristara/web/images/
 Alias /js/ /data/tristara/web/js/
 Alias /flash/ /data/tristara/web/flash/
+Alias /html/ /data/tristara/web/html/
 
 # wordpress
 Alias /blog/ /data/tristara/wordpress/
